[project]
name = "dploy"
description = "Provides functionality similar to GNU Stow as a cross platform CLI tool and Python 3 module"
license = "MIT"
authors = [
    { name = "Ryan Carney", email = "arecarn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Utilities",
]
version = "0.1.3"
dependencies = []

[project.urls]
Homepage = "https://github.com/arecarn/dploy"

[project.scripts]
dploy = "dploy.__main__:main"

[dependency-groups]
dev = [
    "pytest>=4.6",
    "pytest-cov>=2.6.0",
    "pylint>=2.0",
    "radon>=2.0.3",
    "invoke>=2.0",
    "black>=22.0",
    "flake8>=5.0",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
